k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hw6
  labels:
    name: healthchecker-app
